--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,9 @@
 
 <head>
     <title>Webpack Tutorial</title>
-<script defer src="index.bundle.js"></script></head>
+    <link href="css/app.css" rel="stylesheet">
+<script defer src="index.bundle.js"></script>
+</head>
 
 <body>
     <!-- ##### Header Area Start ##### -->
