--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Webpack Tutorial</title>
+    <title>Test</title>
     <link href="css/app.css" rel="stylesheet">
 <script defer src="index.bundle.js"></script>
 </head>
