--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
                                     <div class="row">
                                         <div class="mb-2 col-lg-3 col-md-6 col-12">
                                             <label class="form-label">數量:</label>
-                                            <input type="number" inputmode="decimal" class="form-control form-control-sm js-date" name="singleDate"
+                                            <input type="text" inputmode="decimal" class="form-control form-control-sm js-date" name="singleDate"
                                                 type="date">
                                             <p class="form-message" data-message="日期"></p>
                                         </div>
